# Cohort8-Ransom-Kuti-Ladipo

./: .gitignore  CONTRIBUTE.MD  LICENSE  Makefile  Project Proposal Guideline.docx  README.md  inference.py  project_proposal.md  pyproject.toml  requirements.txt  run_setup.sh  set_environment_variables_template.sh  setup.py  test_infer.py  test_inference.py
.github/ISSUE_TEMPLATE/: bug-report---.md
.github/workflows/: run_units_test.yml
app/: Dockerfile  docker-compose_template.yaml
app/model_infer/: infer.py  main.py
app/model_service/: main.py  requirements.txt
app/streamlit_app/: app.py
app/streamlit_app/components/: configs.py  utils.py
linguify_yb/: README.md  run_train.sh
linguify_yb/data/: dev_samples.json
linguify_yb/development/: code_dev.ipynb  data_dev.ipynb  dev.ipynb  trans_dev.ipynb
linguify_yb/models/: ASl_Transfomer.py  asl_transfomer.py
linguify_yb/notebooks/: analyasis.ipynb
linguify_yb/src/: benchmark.py  config.py  dev_data.py  main.py  train.py  trainer.py
signa2text/: Makefile  README.md  requirements.txt  run_setup.sh  run_train.sh  set_environment_variables_template.sh  train_model.sh
signa2text/data/: dataset_paths.json  dev_samples.json
signa2text/development/: data_dev.ipynb
signa2text/src/: benchmark.py  config.py  dev.ipynb  dev2.ipynb  dev_data.py  download_dev_data.py  main.py  metrics.py  trainer.py
yb2audio/: README.md  set_environment_variables_template.sh
yb2audio/notebooks/: eda.ipynb  iroyin_data_eda.ipynb  model_exp.ipynb
yb2audio/src/: download_dataset.py  main.py
yb_audioloom/: README.md
(+42 files in other folders)
