[tool.poetry]
name = "App Title"
version = "0.1.0"
description = "A Machine Learning System for Sign Language Video Translation and Speech Generation into Low-Resource Languages (LRLs) in Nigeria"
authors = ["Ipadeola Ladipo Ezekiel <105759894+rileydrizzy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pre-commit = "^3.5.0"
opendatasets = "^0.1.22"
loguru = "^0.7.2"
wandb = "^0.15.12"
transformers = "^4.34.0"
pandas = "^2.1.1"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.7.1"}
hydra-core = "^1.3.2"
tensorflow = "^2.14.0"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"
ipykernel = "^6.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
